--- a/coursework/responsive-portfolio-website/scss/main.scss
+++ b/coursework/responsive-portfolio-website/scss/main.scss
@@ -1,5 +1,69 @@
-$primary-color: #444;
+@import "config";
+
 body {
-  background: $primary-color;
+  @include background;
+  background: $dark-shades-color;
   color: #fff;
+  height: 100%;
+  margin: 0;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+
+  &.lg-heading {
+    font-size: 6rem;
+  }
+
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background-color: rgba(
+      lighten($color: $dark-shades-color, $amount: 4),
+      0.5
+    );
+  }
+}
+
+a {
+  text-decoration: none;
+  color: $light-accent-color;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+}
+
+.text-secondary {
+  color: $dark-accent-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+      &:hover {
+        color: $dark-accent-color;
+        @include easeOut;
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
