--- a/coursework/responsive-portfolio-website/scss/main.scss
+++ b/coursework/responsive-portfolio-website/scss/main.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "menu";
 
 body {
   @include background;
@@ -15,12 +16,15 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
+  /*           x   y   blur color */
+  text-shadow: 2px 2px 1px $dark-shades-color;
 
   &.lg-heading {
     font-size: 6rem;
   }
 
   &.sm-heading {
+    font-style: italic;
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background-color: rgba(
@@ -38,6 +42,7 @@ a {
 header {
   position: fixed;
   z-index: 2;
+  width: 100%;
 }
 
 .text-secondary {
