--- a/coursework/responsive-portfolio-website/scss/_menu.scss
+++ b/coursework/responsive-portfolio-website/scss/_menu.scss
@@ -1,6 +1,4 @@
 // Menu Button
-@import "config";
-
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -38,5 +36,112 @@
         height: 6px;
       }
     }
+  }
+}
+
+// Menu Overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%; // each panel
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($dark-shades-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide in from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Branding Side
+  &-branding {
+    background: $dark-shades-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide in from top
+      transform: translate3d(0, 0, 0);
+      @include easeOut;
+    }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url("../img/portrait.png");
+      border-radius: 50%;
+      border: solid 3px $dark-accent-color;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba($dark-shades-color, 0.5);
+        z-index: 1;
+      }
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current a {
+      color: $light-accent-color;
+    }
+
+    a:hover {
+      color: $light-accent-color;
+    }
+  }
+
+  .nav-link {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-weight: 300;
+    display: inline-block;
+    position: relative;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    @include easeOut;
+  }
+}
+
+// Delay each nav-item slide by 0.1 sec
+@for $i from 1 through 4 {
+  .nav-item:nth-child(#{$i}) {
+    transition-delay: $i * 0.06s;
   }
 }
