Finished new color scheme and background

--- a/coursework/responsive-portfolio-website/scss/_config.scss
+++ b/coursework/responsive-portfolio-website/scss/_config.scss
@@ -1,13 +1,13 @@
 $primary-color: #1e182a;
 $dark-shades-color: #1e182a;
-$dark-accent-color: #7d5d7d;
-$main-brand-color: #8f4e63;
-$light-accent-color: #deb81f;
+$dark-accent-color: #8f4e63;
+$main-brand-color: #7d5d7d;
+$light-accent-color: #6dcedf;
 $light-shades-color: #eff2f0;
 
 $show-home-image: true;
-$home-image: url("../img/623451695-md.jpg");
-$background-opacity: 0.9;
+$home-image: url("../img/mtfuji.jpeg");
+$background-opacity: 0.4;
 * {
   box-sizing: border-box;
 }
