--- a/coursework/responsive-portfolio-website/scss/main.scss
+++ b/coursework/responsive-portfolio-website/scss/main.scss
@@ -8,16 +8,20 @@ body {
   height: 100%;
   margin: 0;
   font-family: Georgia, "Times New Roman", Times, serif;
+  //font-family: 'Domine', serif;
   line-height: 1.5;
 }
 
+i {
+  text-shadow: 1.5px 2px 1.5px $dark-shades-color;
+}
 h1,
 h2,
 h3 {
   margin: 0;
   font-weight: 400;
   /*           x   y   blur color */
-  text-shadow: 1px 1.5px 1px $dark-shades-color;
+  text-shadow: 1.5px 2px 1.5px $dark-shades-color;
 
   &.lg-heading {
     font-size: 6rem;
@@ -28,11 +32,20 @@ h3 {
     font-style: italic;
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
+    /*
     background-color: rgba(
       lighten($color: $dark-shades-color, $amount: 4),
-      0.5
-    );
+      0.5 
+    );*/
   }
+}
+
+h1 {
+  font-family: "Hind", sans-serif;
+}
+
+h2 {
+  font-family: "Domine", serif;
 }
 
 a {
