--- a/coursework/responsive-portfolio-website/scss/_menu.scss
+++ b/coursework/responsive-portfolio-website/scss/_menu.scss
@@ -91,7 +91,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait.png");
+      background: url("../img/portrait_metaphisics.jpg");
       border-radius: 50%;
       border: solid 3px $dark-accent-color;
 
@@ -127,8 +127,8 @@
   }
 
   .nav-link {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    //font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Hind", sans-serif;
     font-weight: 300;
     display: inline-block;
     position: relative;
