--- a/coursework/responsive-portfolio-website/scss/_mobile.scss
+++ b/coursework/responsive-portfolio-website/scss/_mobile.scss
@@ -48,6 +48,17 @@
       border-radius: 50%;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smartphones
