--- a/coursework/responsive-portfolio-website/scss/main.scss
+++ b/coursework/responsive-portfolio-website/scss/main.scss
@@ -1,10 +1,12 @@
 @import "config";
 @import "menu";
-@import "mobile";
+// Media queries to the bottom of the file:
+//@import "mobile";
+
 body {
   @include background;
-  background: $dark-shades-color;
-  color: #fff;
+  background: $background-color;
+  color: set-shades-color($background-color);
   height: 100%;
   margin: 0;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -29,14 +31,8 @@ h3 {
   }
 
   &.sm-heading {
-    font-style: italic;
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    /*
-    background-color: rgba(
-      lighten($color: $dark-shades-color, $amount: 4),
-      0.5 
-    );*/
   }
 }
 
@@ -44,8 +40,9 @@ h1 {
   font-family: "Hind", sans-serif;
 }
 
-h2 {
-  font-family: "Domine", serif;
+h2,
+h3 {
+  font-family: courier;
 }
 
 a {
@@ -65,7 +62,8 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  //height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
@@ -86,3 +84,47 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: solid 3px $dark-accent-color;
+  }
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+  .job-1 {
+    grid-area: job1;
+  }
+  .job-2 {
+    grid-area: job2;
+  }
+  .job-3 {
+    grid-area: job3;
+  }
+  .job {
+    background: lighten($background-color, 5);
+    padding: 0.5rem;
+    border-bottom: $dark-accent-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($background-color, 5);
+  color: set-shades-color($background-color);
+  height: 60px;
+}
+
+@import "mobile";
