--- a/coursework/responsive-portfolio-website/scss/_mobile.scss
+++ b/coursework/responsive-portfolio-website/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // Tablets & Small Laptops
@@ -59,6 +65,10 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
@@ -71,5 +81,9 @@
   }
   h2 {
     font-size: 1.25rem;
+  }
+
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
