--- a/coursework/final-project/scss/main.scss
+++ b/coursework/final-project/scss/main.scss
@@ -2,10 +2,8 @@
 @import "menu";
 @import "quote";
 @import "footer";
-
-// Media queries to the bottom of the file:
+@import "topnav"; // Media queries to the bottom of the file:
 //@import "mobile";
-
 body {
   @include background;
   background: $background-color;
