--- a/coursework/final-project/scss/_hero-image.scss
+++ b/coursework/final-project/scss/_hero-image.scss
@@ -1,4 +1,10 @@
 //https://www.w3schools.com/howto/howto_css_hero_image.asp
+
+body,
+html {
+  height: 100%;
+}
+
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
