--- a/coursework/final-project/scss/_hero-image.scss
+++ b/coursework/final-project/scss/_hero-image.scss
@@ -19,14 +19,21 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+
+  top: 2rem;
 }
 
 /* Place text in the middle of the image */
 .hero-text {
+  margin-top: 5rem;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+
+  h1 {
+    font-size: 3rem;
+  }
 }
