--- a/coursework/final-project/scss/_mobile.scss
+++ b/coursework/final-project/scss/_mobile.scss
@@ -17,42 +17,11 @@
   main {
     align-items: center;
     text-align: center;
-
-    .lg-heading {
-      line-height: 1;
-      margin-bottom: 1rem;
-    }
-  }
-  ul.menu-nav,
-  div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0;
-
-    &.show {
-      transform: translate3d(0, 0, 0);
-    }
   }
 
-  .menu {
-    .nav-link {
-      font-size: 2rem;
-      font-weight: 100;
-    }
-  }
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-  }
-
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(100%, 0, 0);
-    .portrait {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-    }
+  h1 {
+    line-height: 1;
+    margin-bottom: 1rem;
   }
 
   .about-info {
@@ -73,11 +42,8 @@
 
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
-  }
   h1 {
-    font-size: 4rem;
+    font-size: 2rem;
   }
   h2 {
     font-size: 1.25rem;
