--- a/coursework/final-project/scss/_topnav.scss
+++ b/coursework/final-project/scss/_topnav.scss
@@ -3,6 +3,7 @@
 .topnav {
   background-color: $background-color;
   overflow: hidden;
+  height: 2 rem;
 }
 
 /* Style the links inside the navigation bar */
@@ -13,7 +14,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.5rem;
 }
 
 /* Change the color of links on hover */
