--- a/coursework/final-project/scss/_hero-image.scss
+++ b/coursework/final-project/scss/_hero-image.scss
@@ -25,7 +25,7 @@ html {
 
 /* Place text in the middle of the image */
 .hero-text {
-  margin-top: 5rem;
+  margin-top: 0rem;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -35,5 +35,41 @@ html {
 
   h1 {
     font-size: 3rem;
+  }
+}
+
+// https://codetheweb.blog/fullscreen-image-hero/
+.hero-button {
+  /* Positioning and sizing */
+  display: block;
+  width: 200px;
+
+  /* Padding and margins */
+  padding: 1em;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+
+  /* Text styles */
+  a {
+    color: $light-shades-color;
+    text-decoration: none;
+    font-size: 1.5em;
+  }
+
+  /* Border styles */
+  border: 2px solid white;
+  border-radius: 20px;
+
+  /* Background styles */
+  background-color: rgba($background-color, 0.8);
+}
+
+@include mediaSm {
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .hero-banner-quote {
+    display: none;
   }
 }
