--- a/coursework/final-project/scss/_quote.scss
+++ b/coursework/final-project/scss/_quote.scss
@@ -1,34 +1,35 @@
 // Original source from
-// https://codepen.io/chris22smith/pen/oQWavL
+// https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
 
-.quote {
-  font-family: "Courier New", Courier, monospace;
-  display: inline-block;
-  margin: 1em;
-  overflow: hidden;
-  blockquote {
-    background-color: $background-color;
-    border-left: solid 2px $dark-accent-color;
-    border-top: solid 2px $dark-accent-color;
-    border-bottom: solid 2px $main-brand-color;
-    border-right: solid 2px $main-brand-color;
-    display: inline-block;
-    margin: 0;
-    padding: 1em;
-    position: relative;
+blockquote {
+  background: $main-brand-color;
+  color: $light-shades-color;
+  border-left: 2px solid $dark-accent-color;
+  //margin: 1.5em 10px;
+  margin: 0.5em 0px;
+  //padding: 0.5em 10px;
+  padding: 0.5em 0px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  //font-size: 4em;
+  font-size: 2em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
 
-    cite {
-      display: block;
-      font-style: italic;
-      text-align: right;
-      &:before {
-        content: "— ";
-      }
-      color: $dark-accent-color;
-    }
-    > * {
-      position: relative;
-      z-index: 1;
-    }
+cite {
+  display: block;
+  font-style: italic;
+  text-align: right;
+  &:before {
+    content: "— ";
   }
+}
+
+blockquote p {
+  display: inline;
 }
