--- a/coursework/final-project/scss/main.scss
+++ b/coursework/final-project/scss/main.scss
@@ -3,36 +3,18 @@
 @import "footer";
 @import "topnav";
 @import "hero-image";
-
+@import "fonts";
+@import "about";
+@import "work";
+@import "contact";
 // Media queries to the bottom of the file:
 //@import "mobile";
 body {
-  //@include background;
   background: $background-color;
   color: set-shades-color($background-color);
   height: 100%;
   margin: 0;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  //font-family: 'Domine', serif;
   line-height: 1.5;
-}
-
-h1,
-h2,
-h3 {
-  margin: 0;
-  font-weight: 400;
-  /*           x   y   blur color */
-  text-shadow: 1.5px 2px 1.5px $dark-shades-color;
-}
-
-h1 {
-  font-family: "Hind", sans-serif;
-}
-
-h2,
-h3 {
-  font-family: courier;
 }
 
 a {
@@ -46,12 +28,11 @@ header {
   width: 100%;
 }
 
-.text-secondary {
-  color: $dark-accent-color;
-}
-
 main {
-  padding: 4rem;
+  //padding: 4rem;
+  padding-top: 4rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   //height: 100%;
   min-height: calc(100vh - $footer-height);
 
@@ -75,82 +56,6 @@ main {
   }
 }
 
-.about-info {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-areas:
-    "bio bio bioimage"
-    "job1 job2 job3";
-  grid-template-columns: repeat(3, 1fr);
-
-  .bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 50%;
-    border: solid 3px $dark-accent-color;
-  }
-  .bio {
-    grid-area: bio;
-    font-size: 1.5rem;
-  }
-  .job-1 {
-    grid-area: job1;
-  }
-  .job-2 {
-    grid-area: job2;
-  }
-  .job-3 {
-    grid-area: job3;
-  }
-  .job {
-    background: lighten($background-color, 5);
-    padding: 0.5rem;
-    border-bottom: $dark-accent-color 5px solid;
-  }
-}
-
-// Work projects
-
-.projects {
-  display: grid;
-  grid-gap: 0.7rem;
-
-  /*                     " three times one fractional" */
-  grid-template-columns: repeat(3, 1fr);
-
-  .project-container {
-    // Positioning text on top of the image
-    // https://www.w3schools.com/howto/howto_css_image_text.asp
-
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-
-    img {
-      // Idea for the zoom effect
-      // https://codepen.io/nxworld/pen/ZYNOBZ
-      width: 100%;
-      transform: scale(1);
-      transition: 0.3s ease-in-out;
-
-      &:hover {
-        width: 100%;
-        transform: scale(1.1);
-      }
-    }
-    .project-links {
-      background: rgba(lighten($background-color, 30), $background-opacity);
-      border-radius: 10%;
-      color: $dark-shades-color;
-
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-}
-
 // Button Styles
 
 .btn {
@@ -170,25 +75,5 @@ main {
 }
 
 // Contact Page
-
-.boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 1rem;
-
-  div {
-    font-size: 1.5rem;
-    border: 3px white solid;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    @include easeOut;
-    &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $dark-shades-color;
-    }
-  }
-}
 
 @import "mobile";
