--- a/coursework/final-project/scss/_work.scss
+++ b/coursework/final-project/scss/_work.scss
@@ -7,15 +7,20 @@
   /*                     " three times one fractional" */
   grid-template-columns: repeat(3, 1fr);
 
-  .project-container {
+  .project-card {
     // Positioning text on top of the image
     // https://www.w3schools.com/howto/howto_css_image_text.asp
 
     position: relative;
     overflow: hidden;
     text-align: center;
+    border: 1px solid $light-accent-color;
 
-    img {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 1px 1px 0 $light-shades-color;
+    transition: 0.3s;
+
+    .project-image {
       // Idea for the zoom effect
       // https://codepen.io/nxworld/pen/ZYNOBZ
       width: 100%;
@@ -27,15 +32,26 @@
         transform: scale(1.1);
       }
     }
-    .project-links {
-      background: rgba(lighten($background-color, 30), $background-opacity);
-      border-radius: 10%;
-      color: $dark-shades-color;
 
+    .project-heading {
       position: absolute;
-      top: 50%;
+      top: 10%;
       left: 50%;
       transform: translate(-50%, -50%);
+      background: rgba($background-color, 0.5);
+      width: 100%;
+    }
+
+    .project-links {
+      display: grid;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+
+      color: $light-shades-color;
+      a {
+        line-height: 2.5rem;
+        color: $light-accent-color;
+      }
     }
   }
 }
