--- a/coursework/final-project/scss/main.scss
+++ b/coursework/final-project/scss/main.scss
@@ -31,6 +31,7 @@ header {
 main {
   //padding: 4rem;
   padding-top: 4rem;
+  padding-bottom: 5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   //height: 100%;
