--- a/coursework/final-project/scss/_hero-image.scss
+++ b/coursework/final-project/scss/_hero-image.scss
@@ -66,10 +66,13 @@ html {
 }
 
 @include mediaSm {
-  .projects {
-    grid-template-columns: repeat(1, 1fr);
-  }
   .hero-banner-quote {
     display: none;
+  }
+}
+
+@include mediaMd {
+  .hero-button {
+    width: 300px;
   }
 }
