--- a/coursework/final-project/scss/_topnav.scss
+++ b/coursework/final-project/scss/_topnav.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   height: 2 rem;
   box-shadow: 0 2px 4px 2px rgba(20, 20, 20, 0.562);
+  max-width: 1000px;
 }
 
 /* Style the links inside the navigation bar */
