--- a/coursework/final-project/scss/_work.scss
+++ b/coursework/final-project/scss/_work.scss
@@ -56,8 +56,26 @@
   }
 }
 
-@include mediaSm {
+//@include mediaSm {
+.projects {
+  grid-template-columns: repeat(1, 1fr);
+}
+//}
+
+@include mediaMd {
   .projects {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
