--- a/coursework/final-project/scss/_about.scss
+++ b/coursework/final-project/scss/_about.scss
@@ -1,21 +1,45 @@
 .about-info {
   display: grid;
-  grid-gap: 30px;
   grid-template-areas:
-    "bio bio bioimage"
-    "job1 job2 job3";
-  grid-template-columns: repeat(3, 1fr);
+    "bioimage"
+    "bio";
+  grid-template-columns: 1fr;
+}
 
-  .bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 50%;
-    border: solid 3px $dark-accent-color;
+@include mediaLg {
+  .about-info {
+    grid-template-areas: "bioimage bio bio";
+    grid-template-columns: repeat(3, 1fr);
   }
-  .bio {
-    grid-area: bio;
-    font-size: 1.5rem;
+}
+
+.bio-image {
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: solid 3px $dark-accent-color;
+}
+.bio {
+  grid-area: bio;
+  font-size: 1.5rem;
+}
+
+.jobs-info {
+  display: grid;
+  grid-gap: 30px;
+
+  @include mediaMd {
+    grid-template-areas:
+      "job1"
+      "job2"
+      "job3";
   }
+
+  @include mediaLg {
+    grid-template-areas: "job1 job2 job3";
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .job-1 {
     grid-area: job1;
   }
