--- a/coursework/final-project/scss/_config.scss
+++ b/coursework/final-project/scss/_config.scss
@@ -39,23 +39,23 @@ $debug: false;
 }
 
 // Media Query Mixins
-
+/*
 @mixin mediaSm {
   @media screen and (max-width: 360px) {
     // Galaxy Fold, Moto G4
     @content;
   }
 }
-
+*/
 @mixin mediaMd {
   // iPhone 6/7/8
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 361px) and (max-width: 768px) {
     @content;
   }
 }
 
 @mixin mediaLg {
-  @media screen and (min-width: 769px) and (max-width: 1170px) {
+  @media screen and (min-width: 769px) /*and (max-width: 1170px) */ {
     @content;
   }
 }
