--- a/coursework/final-project/scss/_fonts.scss
+++ b/coursework/final-project/scss/_fonts.scss
@@ -4,6 +4,9 @@ body {
 
 p {
   font-size: 1rem;
+  @include mediaLg {
+    font-size: 1.5rem;
+  }
 }
 
 h1,
@@ -20,6 +23,9 @@ h4 {
 h1 {
   text-shadow: 1.5px 2px 1.5px $dark-shades-color;
   font-size: 2rem;
+  @include mediaLg {
+    font-size: 4rem;
+  }
 }
 
 h2,
@@ -27,6 +33,9 @@ h3,
 h4,
 h6 {
   font-size: 1.25rem;
+  @include mediaLg {
+    font-size: 2rem;
+  }
 }
 
 h4 {
@@ -39,6 +48,11 @@ h4 {
 
 h6 {
   color: $main-brand-color;
+}
+
+blockquote {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-style: italic;
 }
 
 .text-secondary {
