--- a/coursework/final-project/scss/main.scss
+++ b/coursework/final-project/scss/main.scss
@@ -17,6 +17,11 @@ body {
   line-height: 1.5;
 }
 
+html body {
+  max-width: 1000px;
+  margin: auto;
+}
+
 a {
   text-decoration: none;
   color: $main-brand-color;
@@ -29,7 +34,6 @@ header {
 }
 
 main {
-  //padding: 4rem;
   padding-top: 4rem;
   padding-bottom: 5rem;
   padding-left: 0.5rem;
