refactor scss (responsive design)
Remove ranges and use only min-width in media queries.

--- a/coursework/final-project/scss/_contact.scss
+++ b/coursework/final-project/scss/_contact.scss
@@ -1,26 +1,29 @@
 .contact-boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 1rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-top: 1rem;
 
-  div {
-    padding: 0.25rem 2.5rem;
-    margin-bottom: 3rem;
-    @include easeOut;
-  }
+	.contact-box {
+		width: 100%;
+		padding: 0.25rem 2.5rem;
+		margin-bottom: 1rem;
 
-  @include mediaLg {
-    font-size: 1.5rem;
-    div {
-      border: 3px white solid;
-      padding: 1.5rem 2.5rem;
-    }
+		&-heading {
+			color: $light-accent-color;
+		}
 
-    &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $dark-shades-color;
-    }
-  }
+		&-content {
+			color: $light-shades-color;
+		}
+	}
+
+	@include mediaLg {
+		.contact-box {
+			width: auto;
+			border: 3px white solid;
+			padding: 1.5rem 2.5rem;
+		}
+	}
 }
