--- a/coursework/final-project/scss/_about.scss
+++ b/coursework/final-project/scss/_about.scss
@@ -1,57 +1,50 @@
 .about-info {
-  display: grid;
-  grid-template-areas:
-    "bioimage"
-    "bio";
-  grid-template-columns: 1fr;
+	display: grid;
+	grid-template-areas: "bioimage" "bio";
+	grid-template-columns: 1fr;
 }
 
 @include mediaLg {
-  .about-info {
-    grid-template-areas: "bioimage bio bio";
-    grid-template-columns: repeat(3, 1fr);
-  }
+	.about-info {
+		grid-template-areas: "bioimage bio bio";
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 
 .bio-image {
-  grid-area: bioimage;
-  margin: auto;
-  border-radius: 50%;
-  border: solid 3px $dark-accent-color;
+	grid-area: bioimage;
+	margin: auto;
+	border-radius: 50%;
+	border: solid 3px $dark-accent-color;
 }
 .bio {
-  grid-area: bio;
-  font-size: 1.5rem;
+	grid-area: bio;
+	font-size: 1.5rem;
 }
 
 .jobs-info {
-  display: grid;
-  grid-gap: 30px;
+	display: grid;
+	grid-gap: 30px;
 
-  @include mediaMd {
-    grid-template-areas:
-      "job1"
-      "job2"
-      "job3";
-  }
+	grid-template-areas: "job1" "job2" "job3";
 
-  @include mediaLg {
-    grid-template-areas: "job1 job2 job3";
-    grid-template-columns: repeat(3, 1fr);
-  }
+	@include mediaLg {
+		grid-template-areas: "job1 job2 job3";
+		grid-template-columns: repeat(3, 1fr);
+	}
 
-  .job-1 {
-    grid-area: job1;
-  }
-  .job-2 {
-    grid-area: job2;
-  }
-  .job-3 {
-    grid-area: job3;
-  }
-  .job {
-    background: lighten($background-color, 5);
-    padding: 0.5rem;
-    border-bottom: $dark-accent-color 5px solid;
-  }
+	.job-1 {
+		grid-area: job1;
+	}
+	.job-2 {
+		grid-area: job2;
+	}
+	.job-3 {
+		grid-area: job3;
+	}
+	.job {
+		background: lighten($background-color, 5);
+		padding: 0.5rem;
+		border-bottom: $dark-accent-color 5px solid;
+	}
 }
