--- a/coursework/final-project/scss/_fonts.scss
+++ b/coursework/final-project/scss/_fonts.scss
@@ -1,60 +1,69 @@
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 p {
-  font-size: 1rem;
-  @include mediaLg {
-    font-size: 1.5rem;
-  }
+	font-size: 1rem;
+	@include mediaMd {
+		font-sizr: 1.2rem;
+	}
+	@include mediaLg {
+		font-size: 1.5rem;
+	}
+	include mediaXl {
+		font-size: 2rem;
+	}
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: $light-shades-color;
-  margin: 0;
-  font-weight: 400;
-  /*           x   y   blur color */
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	color: $light-shades-color;
+	margin: 0;
+	font-weight: 400;
+	/*           x   y   blur color */
 }
 
 h1 {
-  text-shadow: 1.5px 2px 1.5px $dark-shades-color;
-  font-size: 2rem;
-  @include mediaLg {
-    font-size: 4rem;
-  }
+	text-shadow: 1.5px 2px 1.5px $dark-shades-color;
+	font-size: 2rem;
+	@include mediaLg {
+		font-size: 4rem;
+	}
 }
 
 h2,
 h3,
 h4,
 h6 {
-  font-size: 1.25rem;
-  @include mediaLg {
-    font-size: 2rem;
-  }
+	font-size: 1.25rem;
+	@include mediaLg {
+		font-size: 2rem;
+	}
+	@include mediaXl {
+		font-size: 2.5rem;
+	}
 }
 
 h4 {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-variant: small-caps;
-  font-weight: 800;
-  font-size: 1rem;
+	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-variant: small-caps;
+	font-weight: 800;
+	font-size: 1rem;
 }
 
 h6 {
-  color: $main-brand-color;
+	color: $main-brand-color;
 }
 
 blockquote {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-style: italic;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-style: italic;
 }
 
 .text-secondary {
-  color: $dark-accent-color;
+	color: $dark-accent-color;
 }
