--- a/coursework/final-project/scss/_footer.scss
+++ b/coursework/final-project/scss/_footer.scss
@@ -24,13 +24,28 @@
 // }
 
 // https://www.w3schools.com/howto/howto_css_fixed_footer.asp
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background: darken($background-color, 5);
-  color: white;
-  text-align: center;
-  z-index: 99;
+footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background: darken($background-color, 5);
+	color: white;
+	text-align: center;
+	z-index: 99;
+
+	margin-top: 2rem;
+	height: $footer-height;
+
+	.icons {
+		margin-top: 1rem;
+
+		a {
+			padding: 0.4rem;
+			&:hover {
+				color: $light-accent-color;
+				@include easeOut;
+			}
+		}
+	}
 }
